--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Java CI with Maven
 on:
   push:
-    branches: [ main ]
+    branches: [ main,master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main,master ]
 jobs:
   build:
     runs-on: ubuntu-latest
